--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
 input:focus::placeholder{
     color:transparent;
 }
+.extendCol{
+    height:100% !important;
+    vertical-align: top !important;
+}
